maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:4: error: value unary_! is not a member of Int
		if (!murAGauche()) {
                    ^Escaper:17: error: type mismatch;
 found   : Boolean(true)
 required: Int
		return true
                       ^Escaper:20: error: type mismatch;
 found   : Boolean(false)
 required: Int
		return false
                       ^